Changed: 简化使用方法

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>ly-tab展示demo</title>
+    <title>ly-tab使用demo</title>
     <style>
       body {
         margin: 0;padding: 0;
